Agregada función "Agregar Tarifa"

--- a/app/src/main/res/layout/activity_agregar_tarifa.xml
+++ b/app/src/main/res/layout/activity_agregar_tarifa.xml
@@ -6,29 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".AgregarTarifaActivity">
 
-    <EditText
-        android:id="@+id/zonaEditText"
-        style="@style/Widget.AppCompat.EditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="60dp"
-        android:ems="10"
-        android:hint="Zona"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Spinner
         android:id="@+id/activoSpinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:spinnerMode="dropdown"
-        app:layout_constraintEnd_toEndOf="@+id/zonaEditText"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/zonaEditText"
+        app:layout_constraintEnd_toEndOf="@+id/zonaSpinner2"
+        app:layout_constraintStart_toStartOf="@+id/zonaSpinner2"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
@@ -47,19 +31,39 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:text="Tipo de activo:"
-        app:layout_constraintStart_toStartOf="@+id/zonaEditText"
-        app:layout_constraintTop_toBottomOf="@+id/zonaEditText" />
+        app:layout_constraintStart_toStartOf="@+id/zonaSpinner2"
+        app:layout_constraintTop_toBottomOf="@+id/zonaSpinner2" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:text="Zona:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/addBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Agregar"
         android:textAllCaps="true"
+        app:layout_constraintEnd_toEndOf="@+id/precioEditText"
+        app:layout_constraintStart_toStartOf="@+id/precioEditText"
+        app:layout_constraintTop_toBottomOf="@+id/precioEditText" />
+
+    <Spinner
+        android:id="@+id/zonaSpinner2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/precioEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
