--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -7,7 +7,7 @@
     tools:context=".AdminMenuActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/administrarUsuariosBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -22,9 +22,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/administrar_activos_btn"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintEnd_toEndOf="@+id/administrarUsuariosBtn"
+        app:layout_constraintStart_toStartOf="@+id/administrarUsuariosBtn"
+        app:layout_constraintTop_toBottomOf="@+id/administrarUsuariosBtn" />
 
     <Button
         android:id="@+id/administrarTarifasBtn"
