--- a/app/src/main/res/layout/activity_crear_activo.xml
+++ b/app/src/main/res/layout/activity_crear_activo.xml
@@ -10,23 +10,35 @@
         android:id="@+id/guardarBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:text="Guardar"
         app:layout_constraintEnd_toEndOf="@+id/tipoDeActivoEditText"
         app:layout_constraintStart_toStartOf="@+id/tipoDeActivoEditText"
-        app:layout_constraintTop_toBottomOf="@+id/tipoDeActivoEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/puntosEditText" />
 
     <EditText
         android:id="@+id/tipoDeActivoEditText"
         style="@style/Widget.AppCompat.EditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Tipo de activo"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/puntosEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Puntos"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="@+id/tipoDeActivoEditText"
+        app:layout_constraintStart_toStartOf="@+id/tipoDeActivoEditText"
+        app:layout_constraintTop_toBottomOf="@+id/tipoDeActivoEditText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
